# JobAnalysis-India-Runs-

./: .gitignore  README.md  ats_pipeline.py  pyproject.toml  submission.xlsx
[PUB] India_runs_data_and_ai_challenge/redrob_candidate_ranker/: .gitignore  README.md
[PUB] India_runs_data_and_ai_challenge/redrob_candidate_ranker/scripts/: build_deck.py  generate_submission.py
[PUB] India_runs_data_and_ai_challenge/redrob_candidate_ranker/src/redrob_ranker/: bundle.py  job_description.py  pdf_deck.py
data/: corpus_stats.json
scripts/: generate_submission.py
simulation-ui/: index.html  package-lock.json  package.json
simulation-ui/src/: App.tsx  index.css
src/redrob_ranker/: __init__.py  config.json  config.py  features.py  job_description.py  pdf_deck.py  ranker.py  reasoning.py  xlsx_writer.py
src/redrob_ranker/agents/: __init__.py  assessment.py  association.py  base.py  bm25.py  certifications.py  compensation.py  constraints.py  engagement.py  github.py  heuristic.py  jaccard.py  language.py  llm.py  master.py  prestige.py  project.py  research.py  semantic.py  seniority.py  stability.py  tfidf.py  tone.py
tests/: test_ranker.py
