[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-candidate-ranker"
version = "0.1.0"
description = "Hybrid candidate ranking system for the Redrob hackathon"
requires-python = ">=3.14"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
